[package]
name = "cat-chaser"
version = "0.2.0-rc.0"
authors = ["Gabriel Martinez <reitaka@gmail.com>"]
repository = "https://github.com/mystal/cat-chaser"
edition = "2021"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["fast-compile"]
fast-compile = ["bevy/dynamic_linking"]
verbose_logs = []

[dependencies]
# Load and render Aseprite animations from JSON
#bevy_asepritesheet = "0.6"
bevy_asepritesheet = { git = "https://gitlab.com/mystal/bevy_asepritesheet", branch = "dev" }
# To help with loading assets.
bevy_asset_loader = { version = "0.20", features = ["2d", "standard_dynamic_assets"] }
# To add support for loading RON config assets.
bevy_common_assets = { version = "0.10", features = ["ron"]}
# For debug UI.
bevy_egui = { version = "0.27", default-features = false }
# Generic debug UI to inspect entities and components.
# TODO: Put behind a feature flag?
bevy-inspector-egui = { version = "0.24", default-features = false, features = ["highlight_changes"] }
# Audio support
bevy_kira_audio = { version = "0.19", default-features = false, features = ["ogg", "wav"] }
# 2D physics. Mostly used for collision detection.
bevy_rapier2d = "0.26"
# For in-game UI.
bevy-ui-dsl = "0.8"

# For quick, simple random number generation.
fastrand = "2"

# For saving window state.
serde = "1"
ron = "0.8"

# Base engine dependency.
[dependencies.bevy]
version = "0.13"
default-features = false
features = [
    #Multi-threading
    "multi-threaded",

    # Assets
    "bevy_asset",
    "png",

    # Input
    "bevy_gilrs",

    # Windowing
    "bevy_winit",
    "x11",

    # Rendering
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",

    # UI
    "bevy_ui",

    # Web support
    "webgl2",
]
# Explicitly specify bevy_window to add serialize feature.
[dependencies.bevy_window]
version = "0.13"
features = ["serialize"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
# Show panics in the browser console: https://bevy-cheatbook.github.io/platforms/wasm/panic-console.html
console_error_panic_hook = "0.1"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[profile.dist]
inherits = "release"
lto = "thin"

# When doing trunk builds, uncomment these lines to get smaller wasm binaries.
# [profile.release]
# opt-level = "s"
# lto = "thin"

# TODO: If/when trunk supports calling custom cargo profiles, we can use this instead of the above hack.
# Release profile optimizing for smaller binary size. Primarily for wasm builds.
[profile.distweb]
inherits = "dist"
opt-level = "s"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.14.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
default-features = false
include = ["assets/"]

# Specifiy extra dependencies when running CI on Ubuntu Linux
# These packages are installed by default on our current GitHub runner, ubuntu-20.04:
# https://github.com/actions/runner-images/blob/main/images/ubuntu/Ubuntu2004-Readme.md#installed-apt-packages
[workspace.metadata.dist.dependencies.apt]
libx11-dev = "*"
libasound2-dev = "*"
libudev-dev = "*"
libxkbcommon-x11-0 = "*"
